# TOFrepo

./: .gitignore  README.md
Data/Dati_tabelle/: FinalPMT01.txt  FinalPMT02.txt  FinalPMT03.txt
Data/Eff/: PMT01.txt  PMT02.txt  PMT03.txt
Loogbook/: Sessione 04_09_2026.md  Sessione 04_15_2026.md  Sessione 04_16_2026.md  Sessione 04_21_2026 (ASSENTE).md  Sessione 04_22_2026.md  Sessione 04_23_2026.md  Sessione 04_28_2026.md  Sessione 04_29_2026.md  Sessione 04_30_2026.md  Sessione 05_05_2026.md  Sessione 05_06_2026.md  Sessione 05_07_2026.md  Sessione 05_12_2026.md  Sessione 05_14_2026.md  Sessione 05_19_2026.md  Sessione 05_20_2026.md  Sessione 05_21_2026.md  Sessione 09_04_2026.md  Sessione 14_04_2026.md  Sessione 15_04_2026.md  Sessione 16_04_2026.md  Sessione 21_04_2026 (ASSENTE).md
Loogbook/.obsidian/: community-plugins.json  workspace.json
Loogbook/Csv/: FinalPMT01.csv  FinalPMT02.csv  FinalPMT03.csv  FinalPMT04.csv  efficienze_posizione.csv
OutFiles/: Lines.root  Points.root  Res.root
OutFiles/scanW/: 0.1.root  0.2.root  0.3.root  0.4.root  0.5.root  0.6.root  0.7.root  0.8.root  0.9.root  1.0.root
TOF_MC/: Analysis.cpp  Analysis_cpp.d  Analysis_cpp_ACLiC_dict.cxx  Analysis_cpp_ACLiC_dict_rdict.pcm  Analysis_cpp_ACLiC_linkdef.h  Analysis_cpp_ACLiC_map.in  CMakeLists.txt  TOF.root  TOF_NoPb100k_2.root  main.cc  out.root  tof.root
TOF_MC/include/: DetectorConstruction.hh  EventAction.hh  PMTSD.hh  PbSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
TOF_MC/src/: DetectorConstruction.cc  EventAction.cc  PMTSD.cc  PbSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
src/: Efficiency.py
src/Calibrazione/: Cal.cpp  Cal_cpp.d  Cal_cpp_ACLiC_dict_rdict.pcm  Read.cpp  Read_cpp.d  Read_cpp_ACLiC_dict_rdict.pcm  WF.cpp  WF.h  WF_cpp.d  WF_cpp_ACLiC_dict_rdict.pcm
src/TOF/: README.md  (+10 more)
(+3 files in other folders)
